# million-forecast

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  UI_DESIGN_BRIEF.md  _check_db.py  app.py  docker-compose.yml  launcher.py  pyproject.toml  requirements.txt  run_app.cmd
.streamlit/: config.toml
data/: matches_cache.json  models_cache.json  odds_cache.json  sporttery_matches_cache.json
deploy/: nginx.conf.example  restart.sh  setup_task.ps1  setup_ubuntu.sh  start.sh  stop.sh  update.sh
docs/: architecture.md
docs/superpowers/plans/: 2026-07-05-million-forecast-terminal-implementation.md
docs/superpowers/specs/: 2026-07-05-million-forecast-terminal-repair-design.md
scripts/: bootstrap_demo_data.py  bootstrap_today_leagues.py  scheduled_update.py  sync_live_context.py  train_all_models.py
src/football_model/: __init__.py  engine.py
src/football_model/backtesting/: __init__.py  walk_forward.py
src/football_model/betting/: __init__.py  value_filter.py
src/football_model/core/: __init__.py  settings.py  team_mapping.py
src/football_model/data/: __init__.py  cache_loader.py  database.py  repositories.py
src/football_model/features/: __init__.py  pipeline.py
src/football_model/lottery/: __init__.py  baseline.py  models.py  p3_predictor.py  repositories.py  risk.py  services.py  validators.py
src/football_model/models/: __init__.py  base.py  calibration.py  dixon_coles.py  (+7 more)
tests/: test_engine.py  test_ensemble_repair.py  test_framework.py  test_match_analysis.py  test_sporttery_live.py  test_team_intelligence.py  test_training.py
(+54 files in other folders)
